# FlockingProject

./: .gitignore  CMakeLists.txt  README.md  boidMain.cu  config.h  main.cpp  main.cu
datasets/: fake.tsp  grid.tsp  gridAltered.tsp
rendering/: RenderHelpers.cpp  RenderHelpers.h
src/cuda/: updateBoids.cu
src/render/: render.cpp
